--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <title>Thomas Feng</title>
     <link rel="stylesheet" href="css/styles.css" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="https://yucheng.me/static/favicon/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://yucheng.me/static/favicon/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="https://yucheng.me/static/favicon/favicon-16x16.png"/>
-    <link rel="manifest" href="https://yucheng.me/static/favicon/site.webmanifest"/>
-    <link rel="mask-icon" href="https://yucheng.me/static/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png"/>
+    <link rel="manifest" href="static/favicon/site.webmanifest"/>
+    <link rel="mask-icon" href="static/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#444444"/>
     <meta name="theme-color" content="#ffffff"/>
 
