--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Thomas Feng</title>
     <link rel="stylesheet" href="css/styles.css" />
 
+    <link rel="shortcut icon" href="static/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png"/>
