--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="columns is-centered">
             <div class="column is-7">
               <ul>
-                <li><a href="https://me.yucheng.me">About me</a>：My skills, experiences and projects.</li>
+                <li><a href="https://me.yucheng.me">About me</a>：My skills and projects.</li>
                 <li><a href="https://blog.yucheng.me">Blog</a>：My thoughts and notes.</li>
                 <li><a href="https://no.yucheng.me">Wiki</a>：My personal knowledge base.</li>
               </ul>
