adjust: avatar-image, avatar-size #20210418001

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:url" content="https://yucheng.me/" />
     <meta property="og:title" content="Thomas Feng" />
     <meta property="og:description" content="Thomas Feng, a electrical engineering student in Taiwan." />
-    <meta property="og:image" content="https://yucheng.me/static/avatar.jpg" />
-    <meta property="twitter:image" content="https://yucheng.me/static/avatar.jpg" />
+    <meta property="og:image" content="https://yucheng.me/static/avatar-3.jpg" />
+    <meta property="twitter:image" content="https://yucheng.me/static/avatar-3.jpg" />
     <meta property="og:locale" content="en-us" />
 
     <title>Thomas Feng</title>
@@ -43,7 +43,7 @@
     <section class="hero">
       <div class="hero-body">
         <div class="container has-text-centered">
-          <img style="border-radius: 50%;" width="128px" src="static/avatar.jpg" />
+          <img style="border-radius: 50%;" width="200px" src="static/avatar-3.jpg" />
           <h1 class="title is-spaced" style="margin-bottom: 20px;">Thomas Feng ( Yu-Cheng, Feng )</h1>
         </div>
 
