adjust: telegram link #20211006001

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a href="https://github.com/YuCheng21" target="_blank"><i class="fab fa-github fa-2x"></i></a>
               </span>
               <span class="icon is-large">
-                <a href="https://t.me/fyc621" target="_blank"><i class="fab fa-telegram fa-2x"></i></a>
+                <a href="https://t.me/yucheng21" target="_blank"><i class="fab fa-telegram fa-2x"></i></a>
               </span>
               <span class="icon is-large">
                 <a href="https://www.facebook.com/yucheng621" target="_blank"
