--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <nav class="navbar navbar-dark navbar-expand-xl bg-primary px-3 fixed-top shadow">
     <div class="container-fluid">
         <a href="/" class="navbar-brand fs-1 fw-bold py-0 ds-100 hover-scale hover-color-text">
-            <span>Thomas Feng</span>
+            <span>YuCheng</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
             <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,8 @@
             </li>
         </ul>
         <h1 class="d-flex justify-content-center flex-wrap">
-            <span>Feng, Yu-Cheng</span>
+            <span>Thomas Feng</span>&nbsp;
+            <span>(Feng, Yu-Cheng)</span>
         </h1>
         <p class="w-75 fs-5">Hi, I'm Yu-Cheng! I am currently majoring in electrical engineering in university. I like to learn new skills from the Internet and make notes of what I learn to help me remember. Learn from errors, grow from failures. Try to solve the difficulties encountered in learning.</p>
     </div>
