add: navbar item #20220319005

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
             <ul class="navbar-nav fs-4 fw-bold ds-100">
                 <li class="nav-item hover-scale">
+                    <a href="https://yucheng.me" class="nav-link text-white hover-color-text text-active">
+                        <span class="iconify-inline" data-icon="fa-solid:home"></span>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li class="nav-item hover-scale">
                     <a href="https://me.yucheng.me" class="nav-link text-white hover-color-text">
                         <span class="iconify-inline" data-icon="bxs:user-circle"></span>
                         <span>About</span>
