--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li class="nav-item hover-scale">
-                    <a href="https://me.yucheng.me" class="nav-link text-white hover-color-text">
+                    <a href="https://cv.yucheng.me" class="nav-link text-white hover-color-text">
                         <span class="iconify-inline" data-icon="bxs:user-circle"></span>
                         <span>About</span>
                     </a>
